Phase 4: Spring Boot serving API with surface affinity and fatigue tracking
- GET /recommendation?user_id=X&surface=Y returns top-1 surface-adjusted recommendation
- LocalJsonRecommendationStore loads Flink output into in-memory ConcurrentHashMap at startup
- SurfaceAffinityApplier applies affinity matrix at serve time (not stored in batch output)
- FatigueWriter records impressions asynchronously via @Async to keep P99 latency low
- ServingApiConfig wires ScoringConfig, SurfaceAffinityApplier, FatigueEvaluator as Spring beans
- FatigueEvaluator moved from processor to common so both modules share the same impl
- 16 tests: MockMvc controller, surface affinity, service (174 total across all modules)
- JDK 17 required (company standard); added JAVA_HOME note to CLAUDE.md

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>